# whalevault

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FOR[Dami].md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
backend/: .env.example  .gitignore  Dockerfile  config.py  main.py  requirements.txt
backend/api/: __init__.py  deps.py
backend/circuits/: generate_proof.js  package-lock.json  package.json  test_proof.js  withdraw_final.zkey
backend/middleware/: __init__.py  csrf.py
backend/models/: __init__.py  requests.py  responses.py
backend/proof_queue/: __init__.py  job_queue.py
backend/services/: __init__.py  pool_service.py  proof_generator.py  relayer_service.py  veil_service.py
backend/tests/: __init__.py  test_veil_sdk.py
backend/utils/: __init__.py  errors.py  serialization.py
circuits/: package-lock.json  package.json  parse_vk_to_rust.js
circuits/src/: merkle.circom  poseidon.circom  withdraw.circom
docs/: whalevault-pitch.html
docs/architecture/: whalevault-technical-architecture.md
docs/plans/: 2026-01-25-whalevault-prd.md
docs/prompts/: prompt-log.md
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: useConfetti.ts  (+4 more)
veil/: .gitignore  Anchor.toml  Cargo.toml
veil/.cargo/: config.toml
veil/crates/core/src/crypto/: merkle.rs
veil/crates/program/: Anchor.toml  Cargo.toml
veil/crates/program/src/: groth16.rs  lib.rs  merkle.rs  processor.rs  state.rs  verification.rs
veil/src/veil/: solana_client.py  token_utils.py
(+35 files in other folders)
